--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "silver",
     "private": true,
-    "version": "0.0.0",
+    "author": "lopo<lopo@zju.edu.cn>",
+    "version": "0.1.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev:front": "vite --host",
+        "dev:tauri": "tauri dev",
         "build": "tsc && vite build",
-        "preview": "vite preview",
-        "tauri": "tauri"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@tauri-apps/api": "^2.0.0-alpha.11",
