--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -1,43 +1,49 @@
 {
-  "build": {
-    "beforeDevCommand": "yarn dev",
-    "beforeBuildCommand": "yarn build",
-    "devPath": "http://localhost:1420",
-    "distDir": "../dist"
-  },
-  "package": {
-    "productName": "silver",
-    "version": "0.0.0"
-  },
-  "tauri": {
-    "bundle": {
-      "active": true,
-      "targets": "all",
-      "identifier": "com.lopo12123.silver",
-      "icon": [
-        "icons/32x32.png",
-        "icons/128x128.png",
-        "icons/128x128@2x.png",
-        "icons/icon.icns",
-        "icons/icon.ico"
-      ]
+    "build": {
+        // here we manually start the dev server for the frontend
+        // "beforeDevCommand": "yarn dev",
+        "beforeBuildCommand": "yarn build",
+        "devPath": "http://localhost:1420",
+        "distDir": "../dist",
+        // "withGlobalTauri": false,
     },
-    "security": {
-      "csp": null
+    "package": {
+        "productName": "sticker",
+        // the docs say 'If removed the version number from Cargo.toml is used.'
+        "version": "0.0.0"
     },
-    "windows": [
-      {
-        "fullscreen": false,
-        "resizable": true,
-        "title": "silver",
-        "width": 800,
-        "height": 600
-      }
-    ]
-  },
-  "plugins": {
-    "shell": {
-      "open": true
+    "tauri": {
+        "bundle": {
+            "active": true,
+            "targets": "all",
+            "identifier": "com.lopo12123.sticker",
+            "copyright": "Copyright (c) lopo 2023 - present. All rights reserved",
+            "icon": [
+                "icons/32x32.png",
+                "icons/128x128.png",
+                "icons/128x128@2x.png",
+                "icons/icon.icns",
+                "icons/icon.ico"
+            ]
+        },
+        "security": {
+            "csp": null
+        },
+        "windows": [
+            {
+                "decorations": false,
+                "fullscreen": false,
+                "resizable": false,
+                "label": "main",
+                "title": "sticker",
+                "width": 800,
+                "height": 600
+            }
+        ]
+    },
+    "plugins": {
+        "shell": {
+            "open": true
+        }
     }
-  }
 }
