--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "@tauri-apps/api": "^2.0.0-alpha.11",
         "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.21.1"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2.0.0-alpha.17",
