--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,11 +13,20 @@ edition = "2021"
 tauri-build = { version = "2.0.0-alpha", features = [] }
 
 [dependencies]
+# core
 tauri = { version = "2.0.0-alpha", features = ["config-json5"] }
+
+# plugins
+tauri-plugin-log = "2.0.0-alpha"
 tauri-plugin-window = "2.0.0-alpha"
 tauri-plugin-shell = "2.0.0-alpha"
+tauri-plugin-store = "2.0.0-alpha"
+
+# others
+log = "0.4.20"
 serde_json = "1.0"
 
+# optional
 local-ip-address = "0.5.6"
 
 [features]
