--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@tauri-apps/plugin-log": "^2.0.0-alpha.5",
         "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
         "@tauri-apps/plugin-store": "^2.0.0-alpha.5",
+        "air-datepicker": "^3.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.1"
