--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@tauri-apps/api": "^2.0.0-alpha.11",
         "@tauri-apps/plugin-log": "^2.0.0-alpha.5",
         "@tauri-apps/plugin-notification": "^2.0.0-alpha.5",
+        "@tauri-apps/plugin-process": "^2.0.0-alpha.5",
         "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
         "@tauri-apps/plugin-store": "^2.0.0-alpha.5",
         "air-datepicker": "^3.4.0",
