fix: https://github.com/tauri-apps/tauri/issues/8308

--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -32,6 +32,8 @@
         "windows": [
             {
                 "decorations": false,
+                // required! see https://github.com/tauri-apps/tauri/issues/8308 for more info
+                "shadow": false,
                 "transparent": true,
                 // "skipTaskbar": true,
                 "fullscreen": false,
