--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "air-datepicker": "^3.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.21.1"
+        "react-router-dom": "^6.21.1",
+        "react-tooltip": "^5.25.2"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2.0.0-alpha.17",
