chore(deps): jotai

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
         "@tauri-apps/plugin-store": "^2.0.0-alpha.5",
         "air-datepicker": "^3.4.0",
+        "jotai": "^2.6.2",
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.2.0",
