--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@tauri-apps/plugin-store": "^2.0.0-alpha.5",
         "air-datepicker": "^3.4.0",
         "jotai": "^2.6.2",
+        "mac-scrollbar": "^0.13.6",
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.2.0",
