--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
         "tailwindcss": "^3.3.5",
         "typescript": "^5.0.2",
         "vite": "^5.0.12"
-    }
+    },
+    "packageManager": "yarn@3.6.4"
 }
