--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@types/node": "^20.10.2",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/sortablejs": "^1.15.7",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
         "@vitejs/plugin-react-swc": "^3.5.0",
