--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@tauri-apps/plugin-shell": "^2.0.0-alpha.3",
         "@tauri-apps/plugin-store": "^2.0.0-alpha.5",
         "air-datepicker": "^3.4.0",
+        "chart.js": "^4.4.1",
         "dexie": "^3.2.5",
         "jotai": "^2.6.2",
         "mac-scrollbar": "^0.13.6",
