--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ebay/nice-modal-react": "^1.2.13",
         "@tauri-apps/api": "^2.0.0-alpha.11",
         "@tauri-apps/plugin-log": "^2.0.0-alpha.5",
         "@tauri-apps/plugin-notification": "^2.0.0-alpha.5",
