--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@ebay/nice-modal-react": "^1.2.13",
+        "@iarna/toml": "^2.2.5",
         "@tauri-apps/api": "^2.0.0-alpha.11",
         "@tauri-apps/plugin-log": "^2.0.0-alpha.5",
         "@tauri-apps/plugin-notification": "^2.0.0-alpha.5",
@@ -34,10 +35,12 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.1",
         "react-tooltip": "^5.25.2",
-        "sortablejs": "^1.15.2"
+        "sortablejs": "^1.15.2",
+        "yaml": "^2.4.1"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2.0.0-alpha.17",
+        "@types/iarna__toml": "^2.0.5",
         "@types/node": "^20.10.2",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
