--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
         "react-router-dom": "^6.21.1",
         "react-tooltip": "^5.25.2",
         "sortablejs": "^1.15.2",
